--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-ec2": "^1.132.0",
+    "@aws-cdk/aws-s3": "^1.132.0",
     "@aws-cdk/core": "1.132.0",
     "source-map-support": "^0.5.16"
   }
