--- a/package.json
+++ b/package.json
@@ -1,29 +1,24 @@
 {
   "name": "hortacloud",
   "version": "0.1.0",
-  "bin": {
-    "hortacloud": "bin/hortacloud.js"
-  },
   "scripts": {
     "build": "tsc",
+    "postbuild": "cpy '**/*' '!**/*.ts' '../build/' --cwd=src --parents",
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk"
   },
+  "peerDependencies": {
+    "aws-cdk-lib": "~2.2.0",
+    "constructs": "~10.0.13"
+  },
   "devDependencies": {
-    "@aws-cdk/assertions": "1.132.0",
-    "@types/jest": "^26.0.10",
-    "@types/node": "10.17.27",
+    "aws-cdk-lib": "~2.2.0",
+    "constructs": "~10.0.13",
+    "cpy-cli": "^3.1.1",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
-    "aws-cdk": "1.132.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
-  },
-  "dependencies": {
-    "@aws-cdk/aws-ec2": "^1.132.0",
-    "@aws-cdk/aws-s3": "^1.132.0",
-    "@aws-cdk/core": "1.132.0",
-    "source-map-support": "^0.5.16"
   }
 }
