--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk",
-    "clean": "del build cdk.out"
+    "clean": "del build cdk.out",
+    "cleancdk": "npm run clean && npm run build && npm run cdk"
   },
   "peerDependencies": {
     "aws-cdk-lib": "~2.2.0",
@@ -16,6 +17,7 @@
   "devDependencies": {
     "aws-cdk-lib": "~2.2.0",
     "constructs": "~10.0.13",
+    "crypto": "^1.0.1",
     "cpy-cli": "^3.1.1",
     "del-cli": "^4.0.1",
     "jest": "^26.4.2",
