--- a/website/package.json
+++ b/website/package.json
@@ -16,7 +16,7 @@
     "react-dom": "^17.0.2",
     "react-query": "^3.34.0",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
