--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/JaneliaSciComp/hortacloud/issues"
   },
-  "homepage": "https://github.com/JaneliaSciComp/hortacloud#readme"
+  "homepage": "https://github.com/JaneliaSciComp/hortacloud#readme",
+  "dependencies": {
+    "chalk": "^4.1.2"
+  }
 }
