--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "homepage": "https://github.com/JaneliaSciComp/hortacloud#readme",
   "dependencies": {
     "chalk": "^4.1.2"
+  },
+  "devDependencies": {
+    "prettier": "^2.5.1"
   }
 }
