--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/JaneliaSciComp/hortacloud#readme",
   "dependencies": {
-    "chalk": "^4.1.2"
+    "aws-sdk": "^2.1063.0",
+    "chalk": "^4.1.2",
+    "open": "^8.4.0"
   },
   "devDependencies": {
     "prettier": "^2.5.1"
