build no longer needed

--- a/vpc_stack/package.json
+++ b/vpc_stack/package.json
@@ -8,15 +8,15 @@
     "test": "jest",
     "cdk": "cdk",
     "clean": "del build cdk.out",
-    "cleancdk": "npm run clean && npm run build && npm run cdk"
+    "cleancdk": "npm run clean && npm run cdk"
   },
   "peerDependencies": {
-    "aws-cdk-lib": "^2.4.0",
-    "constructs": "~10.0.13"
+    "aws-cdk-lib": "^2.6.0",
+    "constructs": "^10.0.44"
   },
   "devDependencies": {
-    "aws-cdk-lib": "^2.4.0",
-    "constructs": "^10.0.13",
+    "aws-cdk-lib": "^2.6.0",
+    "constructs": "^10.0.44",
     "crypto": "^1.0.1",
     "cpy-cli": "^3.1.1",
     "del-cli": "^4.0.1",
