--- a/admin_api_stack/package.json
+++ b/admin_api_stack/package.json
@@ -21,7 +21,7 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "aws-cdk-lib": "^2.0.0",
+    "aws-cdk-lib": "~2.6.0",
     "aws-sdk": "^2.1056.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.16"
