split backend and front end deployment

--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "scripts": {
     "setup": "node scripts/setup",
-    "deploy": "node scripts/deploy",
-    "destroy": "node scripts/destroy",
+    "deploy-backend": "node scripts/deploy-backend",
+    "deploy-frontend": "node scripts/deploy-frontend",
+    "destroy-backend": "node scripts/destroy-backend",
+    "destroy-frontend": "node scripts/destroy-frontend",
+    "destroy-all": "npm run destroy-frontend && npm run destroy-backend",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
