--- a/vpc_stack/package.json
+++ b/vpc_stack/package.json
@@ -15,6 +15,7 @@
     "constructs": "^10.0.44"
   },
   "devDependencies": {
+    "aws-cdk": "^2.12.0",
     "aws-cdk-lib": "^2.6.0",
     "constructs": "^10.0.44",
     "crypto": "^1.0.1",
