--- a/workstation_stack/package.json
+++ b/workstation_stack/package.json
@@ -18,8 +18,8 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "aws-cdk": "^2.12.0",
     "aws-cdk-lib": "~2.6.0",
-    "aws-sdk": "^2.1056.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.16"
   }
