--- a/workstation_stack/package.json
+++ b/workstation_stack/package.json
@@ -11,16 +11,14 @@
   "devDependencies": {
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
-    "jest": "^26.4.2",
-    "prettier": "2.5.1",
-    "ts-jest": "^26.2.0",
-    "ts-node": "^9.0.0",
-    "typescript": "~3.9.7"
-  },
-  "dependencies": {
     "aws-cdk": "^2.12.0",
     "aws-cdk-lib": "~2.6.0",
     "constructs": "^10.0.0",
-    "source-map-support": "^0.5.16"
+    "jest": "^26.4.2",
+    "prettier": "2.5.1",
+    "source-map-support": "^0.5.16",
+    "ts-jest": "^26.2.0",
+    "ts-node": "^9.0.0",
+    "typescript": "~3.9.7"
   }
 }
