use some fixed values for secrets, keys and passwords to prevent reinstallation if nothing changed

--- a/env.template
+++ b/env.template
@@ -2,8 +2,8 @@ AWS_REGION=<your aws region>
 AWS_ACCOUNT=<your aws account>
 
 HORTA_ORG=<app qualifier name>
-HORTA_STAGE=<deployment stage
-ADMIN_USER_EMAIL=<admin email
+HORTA_STAGE=prod
+ADMIN_USER_EMAIL=<admin email>
 
 HORTA_SERVER_INSTANCE_TYPE=r5n.2xlarge
 HORTA_WS_INSTANCE_TYPE=stream.graphics-pro.4xlarge
@@ -11,8 +11,8 @@ HORTA_WS_IMAGE_NAME=AppStream-Graphics-Pro-WinServer2019-10-08-2021
 
 HORTA_DATA_BUCKETS="janelia-mouselight-imagery"
 
-JACS_JWT_KEY=<jwt secret>
-JACS_MONGO_KEY=<mongo secret>
+JACS_JWT_KEY=<a 32 byte secret>
+JACS_MONGO_KEY=<a 32 byte secret>
 JACS_APP_PASSWD=<app password>
 RABBITMQ_PASSWD=<rabbitmq password>
 JACS_API_KEY=<jacs api key>
