Setup now generates 32 byte secrets in .env
This update also edits the README file to clarify a number of steps
during the install and removes some of the steps that are no longer
needed.

--- a/env.template
+++ b/env.template
@@ -1,22 +1,45 @@
+# Your AWS region and account number can be found in the top right corner
+# of the AWS console.
+
+# AWS_REGION should be in the format us-east-1
 AWS_REGION=<your aws region>
+
+# AWS_ACCOUNT should be in the format 1234-5678-9012
 AWS_ACCOUNT=<your aws account>
 
+# HORTA_ORG should be a short string to uniquely represent your organisation.
+# For example at Janelia Research Campus we use 'janelia'.
 HORTA_ORG=<app qualifier name>
+
+# HORTA_STAGE is used to allow multiple copies of the application to run in
+# the same region and account. This is useful for testing a new deployment
+# or code update. Eg: change this to dev to get a development version and
+# run the deployment again.
 HORTA_STAGE=prod
+
+# ADMIN_USER_EMAIL should be a valid email address that you have access to.
+# This will be used as the initial administrator login and will receive the
+# temporary password.
 ADMIN_USER_EMAIL=<admin email>
 
+# See the installation instructions in the README for details on changing the
+# Instance types used for hosting the application.
 HORTA_SERVER_INSTANCE_TYPE=r5n.2xlarge
 HORTA_WS_INSTANCE_TYPE=stream.graphics-pro.4xlarge
 HORTA_WS_IMAGE_NAME=AppStream-Graphics-Pro-WinServer2019-10-08-2021
 
+# This is a comma separated list of the s3 bucket names that host your imagery.
 HORTA_DATA_BUCKETS="janelia-mouselight-imagery"
 
-JACS_JWT_KEY=<a 32 byte secret>
-JACS_MONGO_KEY=<a 32 byte secret>
-JACS_APP_PASSWD=<app password>
-RABBITMQ_PASSWD=<rabbitmq password>
-JACS_API_KEY=<jacs api key>
-JADE_API_KEY=<jade api key>
+# 32 byte secrets are generated during setup. If you are unhappy with the
+# way these are generated, you can generate your own with openssl.
+# eg: openssl rand -hex 32
+JACS_JWT_KEY=<32 byte secret>
+JACS_MONGO_KEY=<32 byte secret>
+JACS_APP_PASSWD=<32 byte secret> # app password
+RABBITMQ_PASSWD=<32 byte secret> # rabbitmq password
+JACS_API_KEY=<32 byte secret> # jacs api key
+JADE_API_KEY=<32 byte secret> # jade api key
 
 HORTA_APPSTREAM_FLEET_INSTANCES=5
 HORTA_SESSION_DURATION_IN_MINS=960
