parameter for backup folder

--- a/env.template
+++ b/env.template
@@ -30,6 +30,8 @@ HORTA_WS_IMAGE_NAME=AppStream-Graphics-Pro-WinServer2019-10-08-2021
 
 # This is a comma separated list of the s3 bucket names that host your imagery.
 HORTA_DATA_BUCKETS="janelia-mouselight-imagery"
+HORTA_BACKUP_BUCKET="janelia-mouselight-imagery"
+HORTA_BACKUP_FOLDER="/hortacloud/backups"
 
 # 32 byte secrets are generated during setup. If you are unhappy with the
 # way these are generated, you can generate your own with openssl.
