--- a/env.template
+++ b/env.template
@@ -4,7 +4,7 @@
 # AWS_REGION should be in the format us-east-1
 AWS_REGION=<your aws region>
 
-# AWS_ACCOUNT should be in the format 1234-5678-9012
+# AWS_ACCOUNT should be in the format 123456789012 (1234-5678-9012 -> 123456789012)
 AWS_ACCOUNT=<your aws account>
 
 # HORTA_ORG should be a short string to uniquely represent your organisation.
@@ -30,7 +30,10 @@ HORTA_WS_IMAGE_NAME=AppStream-Graphics-Pro-WinServer2019-10-08-2021
 
 # This is a comma separated list of the s3 bucket names that host your imagery.
 HORTA_DATA_BUCKETS="janelia-mouselight-imagery"
-HORTA_BACKUP_BUCKET="janelia-mouselight-imagery"
+# This is a writeable bucket on which to persist the backups
+HORTA_BACKUP_BUCKET="janelia-mouselight-demo"
+# Base backup prefix - if none is specified and the backup bucket is set
+# it defaults to /hortacloud/backups
 HORTA_BACKUP_FOLDER="/hortacloud/backups"
 
 # 32 byte secrets are generated during setup. If you are unhappy with the
