separate arg for restore bucket

--- a/env.template
+++ b/env.template
@@ -33,8 +33,11 @@ HORTA_DATA_BUCKETS="janelia-mouselight-imagery"
 # This is a writeable bucket on which to persist the backups
 HORTA_BACKUP_BUCKET="janelia-mouselight-demo"
 # Base backup prefix - if none is specified and the backup bucket is set
-# it defaults to /hortacloud/backups/latest
-HORTA_BACKUP_FOLDER="/hortacloud/backups/latest"
+# it defaults to /hortacloud/backups
+HORTA_BACKUP_FOLDER="/hortacloud/backups"
+# Bucket from which to restore the database
+HORTA_RESTORE_BUCKET=
+HORTA_RESTORE_FOLDER="/hortacloud/backups/latest"
 
 # 32 byte secrets are generated during setup. If you are unhappy with the
 # way these are generated, you can generate your own with openssl.
