do not set the backup bucket

--- a/env.template
+++ b/env.template
@@ -31,7 +31,7 @@ HORTA_WS_IMAGE_NAME=AppStream-Graphics-Pro-WinServer2019-10-08-2021
 # This is a comma separated list of the s3 bucket names that host your imagery.
 HORTA_DATA_BUCKETS="janelia-mouselight-imagery"
 # This is a writeable bucket on which to persist the backups
-HORTA_BACKUP_BUCKET="janelia-mouselight-demo"
+HORTA_BACKUP_BUCKET=
 # Base backup prefix - if none is specified and the backup bucket is set
 # it defaults to /hortacloud/backups
 HORTA_BACKUP_FOLDER="/hortacloud/backups"
