upgrade aws sdk and aws cdk; backup config as well

--- a/env.template
+++ b/env.template
@@ -4,7 +4,9 @@
 # AWS_REGION should be in the format us-east-1
 AWS_REGION=<your aws region>
 
-# AWS_ACCOUNT should be in the format 123456789012 (1234-5678-9012 -> 123456789012)
+# AWS_ACCOUNT should be in the format 123456789012.
+# Your AWS account is displayed in the AWS console as a number in the format 1234-5678-9012
+# but here it should not have any hyphen characters -> 123456789012
 AWS_ACCOUNT=<your aws account>
 
 # HORTA_ORG should be a short string to uniquely represent your organisation.
