--- a/vpc_stack/src/backuputils/package.json
+++ b/vpc_stack/src/backuputils/package.json
@@ -1,6 +1,9 @@
 {
     "name": "cognito-backup-tools",
     "version": "1.0.0",
+    "dependencies": {
+        "stream": "^0.0.2"
+    },
     "devDependencies": {
         "typescript": "~3.9.7"
     }
