--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "chalk": "^4.1.2",
     "dotenv": "^16.0.0",
     "open": "^8.4.0",
-    "yargs": "^17.3.1"
+    "prompts": "^2.4.2",
+    "yargs": "^17.4.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.1",
