--- a/cognito_stack/src/cognito-backup-resources/package.json
+++ b/cognito_stack/src/cognito-backup-resources/package.json
@@ -5,6 +5,6 @@
         "stream": "^0.0.2"
     },
     "devDependencies": {
-        "typescript": "~3.9.7"
+        "aws-sdk": "^2.1132.0"
     }
 }
