notes to the env template

--- a/env.template
+++ b/env.template
@@ -24,6 +24,9 @@ HORTA_STAGE=prod
 # temporary password.
 ADMIN_USER_EMAIL=<admin email>
 
+# Additional readable Cognito pool
+READABLE_POOL_IDS=
+
 # See the installation instructions in the README for details on changing the
 # Instance types used for hosting the application.
 HORTA_SERVER_INSTANCE_TYPE=r5n.2xlarge
@@ -53,3 +56,7 @@ JADE_API_KEY=<32 byte secret> # jade api key
 
 HORTA_APPSTREAM_FLEET_INSTANCES=5
 HORTA_SESSION_DURATION_IN_MINS=960
+
+# Flag used to specify not to create an admin user
+# this is used when users are imported from an existing backup
+HORTA_NO_ADMIN_USER_FLAG=true
