--- a/admin_api_stack/package.json
+++ b/admin_api_stack/package.json
@@ -11,9 +11,9 @@
   "devDependencies": {
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
-    "aws-cdk": "^2.27.0",
-    "aws-cdk-lib": "^2.27.0",
-    "constructs": "^10.1.25",
+    "aws-cdk": "^2.37.1",
+    "aws-cdk-lib": "^2.37.1",
+    "constructs": "10.1.76",
     "jest": "^26.4.2",
     "prettier": "2.5.1",
     "source-map-support": "^0.5.16",
