enable application settings and user folders; options for server disk sizes and for appstream session disconnecttime

--- a/env.template
+++ b/env.template
@@ -54,7 +54,11 @@ RABBITMQ_PASSWD=<32 byte secret> # rabbitmq password
 JACS_API_KEY=<32 byte secret> # jacs api key
 JADE_API_KEY=<32 byte secret> # jade api key
 
+HORTA_SERVER_SYSTEM_VOLSIZE_GB=10
+HORTA_SERVER_DATA_VOLSIZE_GB=30
+
 HORTA_APPSTREAM_FLEET_INSTANCES=5
+HORTA_SESSION_DISCONNECT_IN_SECS=600
 HORTA_SESSION_DURATION_IN_MINS=960
 
 # Flag used to specify not to create an admin user
