script to setup system logs rotation

--- a/env.template
+++ b/env.template
@@ -43,6 +43,8 @@ HORTA_BACKUP_FOLDER="/hortacloud/backups"
 # Bucket from which to restore the database
 HORTA_RESTORE_BUCKET=
 HORTA_RESTORE_FOLDER="/hortacloud/backups/latest"
+# System logs backup
+HORTA_SYSTEMLOGS_FOLDER="hortacloud/systemlogs"
 
 # 32 byte secrets are generated during setup. If you are unhappy with the
 # way these are generated, you can generate your own with openssl.
