set workstation memory

--- a/env.template
+++ b/env.template
@@ -30,8 +30,12 @@ READABLE_POOL_IDS=
 # See the installation instructions in the README for details on changing the
 # Instance types used for hosting the application.
 HORTA_SERVER_INSTANCE_TYPE=r5n.2xlarge
+# The next 3 variables must be correlated; the image name depends on the instance type 
+# and the memory given to the Horta workstation also depends on the instance type
 HORTA_WS_INSTANCE_TYPE=stream.graphics-pro.4xlarge
 HORTA_WS_IMAGE_NAME=AppStream-Graphics-Pro-WinServer2019-09-01-2022
+# To see maximum memory available based on the instance type check: https://aws.amazon.com/appstream2/pricing
+HORTA_WS_MEM=120G
 
 # This is a comma separated list of the s3 bucket names that host your imagery.
 HORTA_DATA_BUCKETS="janelia-mouselight-imagery"
