--- a/env.template
+++ b/env.template
@@ -67,6 +67,15 @@ HORTA_APPSTREAM_FLEET_INSTANCES=5
 HORTA_SESSION_DISCONNECT_IN_SECS=600
 HORTA_SESSION_DURATION_IN_MINS=960
 
+# enable Internet connectivity for the AppStream instance
+# The internet connectivity will also be enabled automatically 
+# if there are any Google domains or OneDrive domains
+HORTA_APPSTREAM_WITH_INTERNET=true
+# Google App domain
+HORTA_GOOGLE_DOMAINS=janelia.hhmi.org,google.com
+# OneDrive enterprise domain
+HORTA_ONE_DRIVE_DOMAINS=
+
 # Flag used to specify not to create an admin user
 # this is used when users are imported from an existing backup
 HORTA_NO_ADMIN_USER_FLAG=true
