do not explicitly use defaultInternetAccess - that should be available through the nat gateway

--- a/env.template
+++ b/env.template
@@ -67,12 +67,8 @@ HORTA_APPSTREAM_FLEET_INSTANCES=5
 HORTA_SESSION_DISCONNECT_IN_SECS=600
 HORTA_SESSION_DURATION_IN_MINS=960
 
-# enable Internet connectivity for the AppStream instance
-# The internet connectivity will also be enabled automatically 
-# if there are any Google domains or OneDrive domains
-HORTA_APPSTREAM_WITH_INTERNET=true
 # Google App domain
-HORTA_GOOGLE_DOMAINS=janelia.hhmi.org,google.com
+HORTA_GOOGLE_DOMAINS=
 # OneDrive enterprise domain
 HORTA_ONE_DRIVE_DOMAINS=
 
