email options and workstation cache options

--- a/env.template
+++ b/env.template
@@ -72,6 +72,18 @@ HORTA_GOOGLE_DOMAINS=
 # OneDrive enterprise domain
 HORTA_ONE_DRIVE_DOMAINS=
 
+# SMTP settings for sending support email from the workstation
+MAIL_SERVER=
+MAIL_USER=
+MAIL_PASSWORD=
+MAIL_SENDER=
+MAIL_RECEIVER=
+
+# workstation cache location
+# make sure this is outside the persisted user profile or just leave it empty to use the
+# default location - c:/Users/PhotonUser/Downloads/Horta_filecache
+WORKSTATION_CACHE_DIR=
+
 # Flag used to specify not to create an admin user
 # this is used when users are imported from an existing backup
 HORTA_NO_ADMIN_USER_FLAG=true
