--- a/admin_api_stack/user-list-resources/package.json
+++ b/admin_api_stack/user-list-resources/package.json
@@ -10,8 +10,9 @@
   "author": "Richard Threlkeld",
   "license": "Apache-2.0",
   "dependencies": {
-    "aws-sdk": "^2.845.0",
-    "aws-serverless-express": "^3.3.5",
+    "@aws-sdk/client-cognito-identity-provider": "^3.430.0",
+    "@aws-sdk/client-secrets-manager": "^3.430.0",
+    "aws-serverless-express": "^3.4.0",
     "body-parser": "^1.17.2",
     "express": "^4.17.1"
   },
