--- a/website/package.json
+++ b/website/package.json
@@ -7,8 +7,8 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.17.2",
-    "aws-amplify": "^4.3.21",
-    "aws-sdk": "^2.1133.0",
+    "aws-amplify": "^5.3.11",
+    "@aws-sdk/client-cloudformation": "^3.430.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.0",
