do not start all services before the restore is complete; properties to parallelize the restore process

--- a/env.template
+++ b/env.template
@@ -49,6 +49,10 @@ HORTA_RESTORE_BUCKET=
 HORTA_RESTORE_FOLDER="/hortacloud/backups/latest"
 # System logs backup
 HORTA_SYSTEMLOGS_FOLDER="hortacloud/systemlogs"
+# Number of database restore workers (default 1)
+HORTA_RESTORE_WORKERS=1
+# Number of simultaneously restored collections (default 4)
+HORTA_RESTORE_PARALLEL_COLLECTIONS=4
 
 # 32 byte secrets are generated during setup. If you are unhappy with the
 # way these are generated, you can generate your own with openssl.
