add idle session disconnect time

--- a/env.template
+++ b/env.template
@@ -70,6 +70,7 @@ HORTA_SERVER_DATA_VOLSIZE_GB=30
 HORTA_APPSTREAM_FLEET_INSTANCES=5
 HORTA_SESSION_DISCONNECT_IN_SECS=600
 HORTA_SESSION_DURATION_IN_MINS=960
+HORTA_SESSION_IDLE_DISCONNECT_IN_MINS=5
 
 # Google App domain
 HORTA_GOOGLE_DOMAINS=
